src/sass/app.scss
@import '../../node_modules/sass-mediaqueries/_media-queries';

.iowa-light-application {

  > .iowa-light-banner {
    background-color: rgba(0, 0, 0, .65);
    position: fixed;
    top: 0;
    left: 55px;
    z-index: 50;

    > h1 {
      color: rgba(255, 255, 255, .9);
      margin: 0;
      font-family: heebo, arial, 'times new roman', sans-serif;
      font-weight: 100;
      padding: 0 25px;
      cursor: pointer;
      display: inline;
    }
  }

  > .iowa-light-controls {
    cursor: pointer;
    background-color: rgba(0, 0, 0, .65);
    position: fixed;
    top: 0;
    right: 55px;
    z-index: 50;
    height: 45px;
    width: 175px;

    > h4 {
      color: rgba(255, 255, 255, .9);
      text-align: center;
      font-weight: normal;
    }
  }

  .photo-groups,
  .collection-names-only {
    list-style: none;
    margin: 0;
    padding: 0;

    ul, ol {
      list-style: none;
    }
  }

  .collection-items > li {
    padding-top: 25px;

    &:first-child {
      padding-top: 0;
    }

    &:last-child {
      padding-bottom: 20px;
    }
  }

  .collection-name-and-time {
    color: rgba(255, 255, 255, .9);
    font-weight: 100;
    text-align: center;
  }

  .collection-names-only {
    margin: 0 auto;
    width: 590px;

    @include max-screen(1200px) {
      width: 694px;
    }

    @include min-screen(1800px) {
      width: 1100px;
    }

    > li {
      width: 45%;
      display: inline-block;

      > h3 {
        cursor: pointer;
        font-weight: normal;
        color: rgba(255, 255, 255, .9);
      }
    }
  }
}

